# libra-core

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: MBB. Dia chi mang luoi.xlsx  MB_company_profile.xlsx  company_profile.csv  few_shot_job_family.py  jobs_data.json  mb_company_profile_summarized.csv  mb_jobs_7.csv  mb_jobs_7.json  mb_network.py  new_jobs_data.json  prepare_data.py  prepare_data_and_query_engine.py
entrypoints/openai/: api_server.py
entrypoints/oss/: api_embedding.py
entrypoints/ui/: gradio_ui_chat.py
examples/: libra_client_test.py  sample_react_agent_libra.ipynb  sample_react_openai.py  test_data_ingestion.ipynb  test_milvus.py
examples/agents/: test_async_libra_agent_ccu.py
examples/loaders/: test_base_io.py
examples/models/: test_openai_model.py  test_openai_model_ccu.py
examples/retrievers/: temp.py  test_vector_retriever.py
libra/agents/: __init__.py  async_libra_agent.py  chat_agent.py  libra_agent.py  libra_agent_new.py  react_agent.py
libra/config/: __init__.py  common_config.py  openai_config.py
libra/embeddings/: __init__.py  azure_openai_embedding.py  base.py  openai_embedding.py  sentence_transformers_embedding.py
libra/functions/: __init__.py  base_openai_function.py  libra_functions.py  retrieval_functions.py
libra/loaders/: __init__.py  base_io.py  unstructured_io.py
libra/logs/: __init__.py  printing.py
libra/messages/: __init__.py
libra/models/: __init__.py  azure_model.py  (+4 more)
libra_qdrant.db/: meta.json
tasks/: chat_agent.py  gradio_ui_chat.py  test_chat_agent.ipynb  test_fast_api_forward_openai.py
(+45 files in other folders)
