[tool.poetry]
name = "libra"
version = "0.1.0"
description = ""
authors = ["thanglq150188 <thanglq150188@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
openai = "^1.40.0"
tiktoken = "^0.7.0"
requests = "^2.32.3"
pytest = "^8.3.2"
pymilvus = "^2.4.5"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
jsonschema = "^4.23.0"
docstring-parser = "^0.16"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
